dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/hccron.c)
AM_INIT_AUTOMAKE(hc-cron, 0.84)
AM_CONFIG_HEADER(src/include/config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h paths.h sys/file.h sys/ioctl.h sys/time.h syslog.h unistd.h grp.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_TYPE_PID_T
dnl AC_TYPE_TIME_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL
AC_FUNC_UTIME_NULL
AC_FUNC_VFORK
AC_CHECK_FUNCS(gethostname gettimeofday mkdir putenv strdup strtod fchown \
		fchmod setpgrp initgroups setlinebuf seteuid setreuid)
AC_FUNC_SETPGRP
AC_REPLACE_FUNCS(strcasecmp strerror setsid getdtablesize flock setenv)
AC_OUTPUT([
	Makefile
	hc-cron.spec
	src/Makefile
	src/include/Makefile
	doc/Makefile
	redhat/Makefile
])
